--- a/platforms/ios/www/css/main-5.5-inch.css
+++ b/platforms/ios/www/css/main-5.5-inch.css
@@ -1,8 +1,9 @@
 /* iPhone 6+ */
 
 #wrapper { width: 414px; height: 736px; position: relative; }
-#home-filters { width: 414px; height: 52px; }
 #home-filters div { height: 52px; width: 138px; }
+#home-filters { width: 414px; height: 52px; }
+#home-filters div#recommended-filter { width: 138px; }
 #activity-filter-x,
 #activity-filter { right: 139px; }
 #category-container { height: 617px; }
@@ -182,10 +183,12 @@ header nav #chat-menu { top: 8px; }
 }
 #up-next { top: 65px; height: 661px; }
 #up-next-wrapper { height: 641px; }
+/*
 .recommended-filter #category-container {
     max-height: 194px;
     height: 194px;
 }
+*/
 #up-next-wrapper div .title { width: 370px; }
 #dashboard header nav h1.notify { line-height: 45px; }
 #seen-avatars .avatar { margin-left: 35px; }
@@ -284,7 +287,7 @@ header nav #notifications-menu.on { background-image: url(../images/6p/discovery
 #tv-nav { background-image: url(../images/6p/discovery/fabricIcons/tvMenuIcon.png); }
 #travel-nav { background-image: url(../images/6p/discovery/fabricIcons/travelMenuIcon.png); }
 #music-nav { background-image: url(../images/6p/discovery/fabricIcons/musicMenuIcon.png); }
-.check-list-check { background-image: url(../images/6p/discovery/lightgrey-check.png); }
+.check-list-check { background-image: url(../images/6p/discovery/lightgrey-check.png); background-size: 100%; background-position: 0 0; }
 .check-list-check.checked { background-image: url(../images/6p/discovery/redcheck.png); }
 #rate-first.coach0 { background-image: url(../images/6p/discovery/coach/coach0.png); }
 #rate-first.coach1 { background-image: url(../images/6p/discovery/coach/coach1.png); }
