--- a/platforms/ios/www/css/main-5.5-inch.css
+++ b/platforms/ios/www/css/main-5.5-inch.css
@@ -113,10 +113,11 @@ div#mask .wheel {
 #list-items .share-buttons #fb.btn { margin-left: 7px; }
 #profile .action-buttons .button.greeting { margin: 10px 0 10px 30px; }
 .feed-item .recommendation-action { width: 384px; }
-#favorite-delta .delta-poster { height: auto; }
+#favorite-delta .delta-poster { height: 540px; }
 #favorite-delta .delta-poster img { width: 360px; }
+#favorite-delta .feed-item { width: 385px; }
 .feed-footer { width: 100%; }
-#favorite-delta .feed-footer { width: 95%; margin: 0 auto; }
+#favorite-delta .feed-footer { width: 385px; margin: 0 auto; }
 #facebook { top: 327px; }
 #sign-up { top: 411px; }
 #ready-to-start { margin-top: 30px; }
