--- a/platforms/ios/www/css/base.css
+++ b/platforms/ios/www/css/base.css
@@ -2451,14 +2451,14 @@ div.check-list-wrapper div.check-list-item {
     background-position: center;
     -webkit-filter: blur(2px);
     z-index: -1;
-    background-size: 318px 160px;
 }
 .list-summary #info {
-    text-align: center;
-    width: 308px;
-    height: 150px; /* 340 */
-    padding: 6px;
     background-color: rgba(0, 0, 0, 0.45);
+    text-align: center;
+    font-size: 20px;
+    height: 150px; 
+    width: 308px;
+    padding: 6px;
 }
 .discovery header { border: none; }
 .discovery #notifications-menu,
@@ -2471,24 +2471,22 @@ div.check-list-wrapper div.check-list-item {
     height: 50px;
     float: left;
     background-image: url(../images/discovery/avatar.png);
-    background-size: 50px 50px;
+    background-size: 100%;
     border-radius: 25px;
     margin: 10px 10px 0 5px;
 }
 .list-summary #info .name {
     float: left;
     line-height: 70px;
-    font-size: 20px;
 }
 .list-summary #info h1 {
-    font-size: 20px;
+
     padding: 10px;
     overflow: hidden;
     text-align: left;
     font-weight: bold;
 }
 .list-summary #info h2 {
-    font-size: 20px;
     padding: 0 10px;
     text-align: left;
 }
@@ -2741,7 +2739,6 @@ div.right.button, div.left.button {
 */
 #list-items .item .movie-info .watch-icon {
     background-image: url(../images/discovery/fabricIcons/white_queue.png);
-    background-size: 12px;
     background-position: 5px 6px;
 }
 #list-items .item .movie-info .watch-icon.off { background-image: url(../images/discovery/fabricIcons/grey_queue.png); }
@@ -2753,7 +2750,6 @@ div.right.button, div.left.button {
 #list-items .item .movie-info .seen-icon {
     background-image: url(../images/discovery/fabricIcons/white_check.png);
     background-position: 8px 6px;
-    background-size: 12px;
 }
 #list-items .item .movie-info .seen-icon.off { background-image: url(../images/discovery/fabricIcons/grey_check.png); }
 
@@ -3119,6 +3115,7 @@ div#match-exit.button.bg-none { background: none; }
     text-align: center;
     line-height: 25px;
     font-size: 11px;
+    background-size: 12px;
     background-color: rgb(192, 51, 47);
     border: 1px solid rgb(192, 51, 47);
     text-transform: uppercase;
@@ -3698,7 +3695,7 @@ h2#see-more-matches {
 }
 
 #profile .sub-header div {
-    width: 160px;
+    width: 159px;
     float: left;
     height: 45px;
     line-height: 45px;
