--- a/platforms/ios/www/css/main-5.5-inch.css
+++ b/platforms/ios/www/css/main-5.5-inch.css
@@ -102,14 +102,32 @@ div#mask .wheel {
 }
 #play::before { top: 70%; left: 10%; }
 .bottom-info span { background-size: 14px; }
-.list-summary #image { background-size: 414px 197px; }
-.list-summary #info { width: 414px; height: 197px; }
+.list-summary { line-height: 40px; }
+.list-summary #info { width: 394px; height: 230px; padding: 0 10px; }
+.list-summary #info h1 { margin-top: 30px; padding: 0 10px; }
+.list-summary #info .avatar { height: 60px; width: 60px; border-radius: 30px; }
+.list-summary #info .name { line-height: 80px; }
 .discovery #list-items-container { height: 671px; }
 #list-items-container { height: 686px; }
 #list-items .share-buttons .btn {
     width: 96px;
     background-position: 12px 0;
 }
+#list-items .item .movie-info .poster-img { width: 80px; height: 120px; }
+#list-items .item .movie-info h1 { font-size: 20px; }
+#list-items div.item-icons { margin-bottom: 10px; font-size: 20px; }
+#list-items div.item-icons div.recs {
+    background-size: 15px 15px; 
+}
+.movie-info .buttons div { 
+    background-size: 15px;
+    line-height: 35px;
+    font-size: 15px;
+    height: 35px;
+    width: 145px; 
+}
+#list-items .item .movie-info .watch-icon { background-position-y: 10px; }
+#list-items .item .movie-info .seen-icon { background-position-y: 10px; }
 #list-items .share-buttons #fb.btn { margin-left: 7px; }
 #profile .action-buttons .button.greeting { margin: 10px 0 10px 30px; }
 .feed-item .recommendation-action { width: 384px; }
@@ -212,7 +230,6 @@ img.category-img { width: 350px; }
     width: 30px;
     background-size: 30px 30px;
 }
-.movie-info .buttons div { width: 158px; }
 #profile #side-swipe .slick-list, #profile #side-swipe .contain { height: 300px; }
 header nav #chat-menu { background-size: 24px 24px; }
 header nav #share-icon {
