--- a/platforms/ios/www/css/base.css
+++ b/platforms/ios/www/css/base.css
@@ -552,6 +552,7 @@ div.left.button.back:active { opacity: 0.5; }
 .nav-menu-item.active {
     background-color: rgb(226, 226, 226);
 }
+#side-menu-profile .side-menu-icon { border-radius: 15px; }
 .menu-text {
     vertical-align: top;
     line-height: 29px;
